solve padding and margin problems on mobile version

--- a/components/descriptComponent/containerDescript.module.scss
+++ b/components/descriptComponent/containerDescript.module.scss
@@ -3,17 +3,18 @@
 .container {
   background-color: $bg-small-descript;
   color: lightgray;
-  padding: 1rem 2rem;
+  padding: 2rem 2rem;
   text-align: justify;
   gap: 2rem;
   // height: 100vh;
 
   @include from-md {
-    padding: 2.5rem 7rem;
+    padding: 3rem 7rem;
     display: flex;
     gap: 2rem;
     flex-direction: row;
     justify-content: space-around;
+    font-size: 1.25rem;
   }
 }
 
