--- a/components/presentation.module.scss
+++ b/components/presentation.module.scss
@@ -12,7 +12,6 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-  // background-color: firebrick;
 }
 
 .imageContainer {
@@ -27,7 +26,6 @@
   border-radius: 13%;
   height: 37%;
   width: 37%;
-  // max-width: 12rem;
   margin: 0 0.5rem;
 
   @include from-md {
@@ -56,11 +54,11 @@
 }
 
 .icon {
-  min-height: 1rem;
+  min-height: 1.25rem;
 
   @include from-md {
     min-height: 2rem;
-    margin: 0.5rem;
+    margin: 0.25rem;
   }
 }
 
@@ -82,16 +80,19 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: 2rem 3rem;
+  padding: 3rem 1.5rem;
   background-color: white;
   text-align: justify;
-
+  
   @media (prefers-color-scheme: dark) {
     background-color: $bg-description-dark;
+    font-size: 1.25rem;
+    padding: 3rem 3rem;
   }
 
   h3 {
     font-weight: bold;
+    font-size: 2rem;
   }
 
   .imageDesc {
