--- a/components/utils/downloadPDF.module.scss
+++ b/components/utils/downloadPDF.module.scss
@@ -10,11 +10,15 @@
     align-items: center;
     gap: 0.5rem;
     font-size: 1rem;
+    
+    p{
+      margin-right: 0.25rem;
+    }
   }
   
   .icon {
-    height: 1rem;
-    margin: 0.5rem;
+    height: 1.25rem;
+    margin: 0.25rem;
   
     @include from-md {
       height: 2rem;
